# DBTT_G5T1

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: lint-markdown.yml  run-checks.yml  validate-markdown.yml
app/backend/: main.py
app/backend/api/routers/: analytics.py  chat.py  ml.py
app/backend/config/: config.py
app/backend/core/: dependencies.py  factories.py  settings.py
app/backend/data/: data_manager.py  patient_priority_modified.csv
app/backend/database/: mongodb.py
app/backend/database/faiss/: faiss_config.json
app/backend/models/: patient_grid.pkl  patient_scalers_dict.pkl
app/backend/postman/: sample_request.json
app/backend/prepdocslib/: extract_docs.py  split_docs.py  vector_store.py
app/backend/prepdocslib/docs/: approved_sources.json
app/backend/prompts/: automated_diagnosis.yaml  prompt_manager.py  response_synthesis.yaml
app/backend/schemas/: chat.py  patient_analytics.py  source.py  state.py  urgency_classification.py  usage.py
app/backend/utils/: file_management.py  patient_analytics.py
app/backend/workflows/: __init__.py  rag_workflow.py
app/backend/workflows/components/: response_synthesiser.py  source_retrieval.py  urgency_classifier.py
app/frontend/: Dockerfile  docker-entrypoint.sh  eslint.config.js  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
app/frontend/src/: App.tsx  index.css
app/frontend/src/components/: AppSidebar.tsx  PageLayout.tsx
data/: _sources.txt
docs/: PROJECT_STRUCTURE.md
notebooks/: chatbot.ipynb  data_ingestion.ipynb  diagnosis.ipynb  sample.ipynb  triage_classification.ipynb  triage_dataset_modifications.ipynb  urgency_classification.ipynb  urgency_dataset_modifications.ipynb
notebooks/faiss_index/: index.faiss  index.pkl
scripts/: load_python_env.ps1  load_python_env.sh  prepdocs_build.ps1  prepdocs_build.sh  prepdocs_update.ps1  prepdocs_update.sh  start.ps1  start.sh  start_docker.ps1  start_docker.sh
utils/: format_conversion.py
(+36 files in other folders)
