[project]
name = "dbtt-g5t1"
version = "0.1.0"
description = "Code Repository for IS215 Digital Business (Technologies and Transformation) G5 Team 1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
format=[
    "black[jupyter]==25.1.0",
    "click==8.1.7",
    "isort==6.0.1",
    "nbqa==1.9.1",
    "pre-commit>=4.5.1",
    "ruff==0.11.10",
]
